--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3"
   }
 }
